# Mekamon-BLE-Project

./: .gitignore  LICENSE  MEKAMON_PROTOCOL.md  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/gaits/: 1ca0839e-e0e9-443a-8821-f4a816eef9fc.gait  acbefc30-db40-4d73-b90b-953ea53a97c0.gait
assets/motions/: Cannon.motion  Little_Wave.motion  Ninja_Flip_Forwards.motion  Shield.motion  Swimming.motion  Take_the_L.motion  Turret.motion  Workout.motion
docs/: command-pipeline.md  joint-encoding.md  movement.md  recovered-data.md
examples/: drive_demo.py  scan.py
gui/: app.py
mekamon/: __init__.py  __main__.py  ble.py  commands.py  controller.py  motion.py  protocol.py
tests/: test_protocol.py
tools/: ble_selftest.py  make_icon.py
tools/disasm/: analyze_joints.py  analyze_send.py
