[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mekamon-ble"
version = "0.1.0"
description = "Bleak-based controller and GUI for Reach Robotics MekaMon robots (no firmware mods)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["bleak>=0.22"]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=7"]

[project.scripts]
mekamon-scan = "mekamon.__main__:scan_cli"

[tool.setuptools]
packages = ["mekamon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
